--- a/flight-booking-app/package.json
+++ b/flight-booking-app/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
@@ -25,8 +26,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "swiper": "^8.4.5",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "swiper": "^8.4.5"
+    "vite": "^5.2.0"
   }
 }
