--- a/flight-booking-app/package.json
+++ b/flight-booking-app/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "react-router-dom": "^6.23.1",
     "postcss": "^8.4.38",
     "swiper": "^8.4.5",
     "tailwindcss": "^3.4.3",
